--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
     <!-- Apple -->
-    <link rel="apple-touch-icon" sizes="192x192" href="../images/192x192.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="../images/512x512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/src/192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/src/512x512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes"/> 
     <meta name="apple-mobile-web-app-title" content="PWAshop" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <!-- Google -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" href="../maskable_icon_x512.png">
-    <link rel="icon" sizes="192x192" href="../images/192x192.png">
-    <link rel="icon" sizes="512x512" href="../images/512x512.png">
+    <link rel="icon" href="/maskable_icon_x512.png">
+    <link rel="icon" sizes="192x192" href="/src/192x192.png">
+    <link rel="icon" sizes="512x512" href="/src/512x512.png">
 
     <link rel="manifest" href="./manifest.json" />
   </head>
