--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
     <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">hello</div>
   </body>
 </html>
