--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" sizes="192x192" href="/src/192x192.png">
     <link rel="icon" sizes="512x512" href="/src/512x512.png">
 
-    <link rel="manifest" href="/public/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root">hello</div>
