--- a/index.html
+++ b/index.html
@@ -4,35 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
     <!-- Apple -->
-    <link rel="apple-touch-icon" sizes="192x192" href="/src/192x192.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/src/512x512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/images/512x512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes"/> 
     <meta name="apple-mobile-web-app-title" content="PWAshop" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <!-- Google -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" href="/maskable_icon_x512.png">
-    <link rel="icon" sizes="192x192" href="/src/192x192.png">
-    <link rel="icon" sizes="512x512" href="/src/512x512.png">
+    <link rel="icon" sizes="192x192" href="/images/192x192.png">
+    <link rel="icon" sizes="512x512" href="/images/512x512.png">
 
-    <link rel="manifest" href="/manifest.json" />
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/>
   </head>
   <body>
     <div id="root">hello</div>
     
     <script>
-      // 서비스 워커 등록
-      if ('serviceWorker' in navigator) {
-          window.addEventListener('load', () => {
-              navigator.serviceWorker.register('/sw.js')
-              .then((registration) => {
-                  console.log('Service Worker registered with scope:', registration.scope);
-              })
-              .catch((error) => {
-                  console.error('Service Worker registration failed:', error);
-              });
+      (function () {
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.register('/sw.js').then(function (registration) {
+            console.log(registration);
+          }, function (err) {
+            console.log(err)
           });
-      }
-  </script>
+        }
+      })();
+    </script>
   </body>
 </html>
