--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
     <link rel="icon" sizes="512x512" href="/images/512x512.png">
 
     <!-- <link rel="manifest" href="/manifest.json" /> -->
-    <link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/>
+    <link rel="manifest" href="/PWA-shop/manifest.webmanifest" crossorigin="anonymous"/>
   </head>
   <body>
     <div id="root">hello</div>
     
     <script>
       (function () {
-        if ("serviceWorker" in navigator) {
-          navigator.serviceWorker.register('/sw.js').then(function (registration) {
-            console.log(registration);
-          }, function (err) {
-            console.log(err)
+
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+              navigator.serviceWorker.register('/PWA-shop/sw.js') // 여기 경로 확인
+              .then((registration) => {
+                  console.log('Service Worker registered with scope:', registration.scope);
+              })
+              .catch((error) => {
+                  console.error('Service Worker registration failed:', error);
+              });
           });
-        }
+      }
+
       })();
     </script>
   </body>
