--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
     <!-- Apple -->
-    <link rel="apple-touch-icon" sizes="192x192" href="/images/192x192.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/images/512x512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/PWA-shop/images/192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/PWA-shop/images/512x512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes"/> 
     <meta name="apple-mobile-web-app-title" content="PWAshop" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <!-- Google -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" href="/maskable_icon_x512.png">
-    <link rel="icon" sizes="192x192" href="/images/192x192.png">
-    <link rel="icon" sizes="512x512" href="/images/512x512.png">
+    <link rel="icon" href="/PWA-shop/maskable_icon_x512.png">
+    <link rel="icon" sizes="192x192" href="/PWA-shop/images/192x192.png">
+    <link rel="icon" sizes="512x512" href="/PWA-shop/images/512x512.png">
 
     <!-- <link rel="manifest" href="/manifest.json" /> -->
-    <link rel="manifest" href="/PWA-shop/manifest.webmanifest" crossorigin="anonymous"/>
+    <link rel="manifest" href="/PWA-shop/manifest.json" crossorigin="anonymous"/>
   </head>
   <body>
     <div id="root">hello</div>
